bring in handwritten font

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
+@font-face{
+  font-family: 'CraftyGirls';
+  src: url('/CraftyGirls-Regular.ttf');
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'CraftyGirls', BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
