--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
 @font-face{
-  font-family: 'CraftyGirls';
-  src: url('/CraftyGirls-Regular.ttf');
+  font-family: 'Brownhill';
+  src: url('/Brownhill-Script.ttf');
 }
 body {
   margin: 0;
-  font-family: 'CraftyGirls', BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Brownhill', BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
