--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,15 @@
   height: 100%;
   display: flex;
 }
+
+.page {
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
