consistent backdrops for non landing pages

--- a/src/components/background-video/index.scss
+++ b/src/components/background-video/index.scss
@@ -9,10 +9,7 @@
     filter: hue-rotate(30deg) brightness(1.8) blur(12px) saturate(1) grayscale(0);
   }
 
-  &.intro-finished.epk{
-    filter: hue-rotate(150deg) brightness(10) blur(20px) saturate(3) grayscale(0.4);
-  }
-
+  &.intro-finished.epk,
   &.intro-finished.blog{
     filter: hue-rotate(0) brightness(1) blur(0) saturate(0) grayscale(0);
   }
