blog request works

--- a/src/components/blog/index.scss
+++ b/src/components/blog/index.scss
@@ -1,8 +1,11 @@
-div.blog {
+.page.blog {
+  top: 150px;
+  width: calc(100% - 100px);
+  align-items: flex-start;
+  justify-content: flex-start;
+
   div.paper{
-    position: relative;
-    height: 75vh;
-    width: 70vw;
+    width: 100%;
     color: #000;
 
     img.paper-img{
