--- a/src/components/background-video/index.scss
+++ b/src/components/background-video/index.scss
@@ -1,16 +1,18 @@
 .background-video{
   height: 100%;
   width: 100%;
-  filter: hue-rotate(0deg) brightness(1) blur(0) saturate(1);
+  filter: hue-rotate(0deg) brightness(1) blur(0) saturate(1) invert(0);
   transition: filter 1s;
   object-fit: cover;
 
   &.intro-finished.landing{
-    filter: hue-rotate(30deg) brightness(1.8) blur(12px) saturate(1) grayscale(0);
+    filter: hue-rotate(30deg) brightness(1.8) blur(12px) saturate(1) invert(0);
   }
 
-  &.intro-finished.epk,
-  &.intro-finished.blog{
-    filter: hue-rotate(0) brightness(1) blur(0) saturate(0) grayscale(0);
+  &.intro-finished.epk {
+    filter: hue-rotate(0) brightness(1) blur(0) saturate(0) invert(0);
+  }
+  &.intro-finished.blog {
+    filter: hue-rotate(0) brightness(1) blur(0) saturate(1) invert(1);
   }
 }
