--- a/src/components/blog/index.scss
+++ b/src/components/blog/index.scss
@@ -1,38 +1,20 @@
 .page.blog {
+  color: #000;
   top: 150px;
-  width: calc(100% - 100px);
-  align-items: flex-start;
-  justify-content: flex-start;
 
-  div.paper{
-    width: 100%;
-    color: #000;
+  div.post-container{
+    width: 60vw;
 
-    img.paper-img{
-      width: 100%;
-      position: absolute;
-      transform: rotate(-1.5deg);
-      opacity: 0.7;
+    h1 {
+      font-size: 52px;
+      margin-bottom: 0;
     }
-    div.paper-inner{
-      padding-left: 16vw;
-      padding-top: 6.5vh;
-      padding-right: 13vw;
-      position: absolute;
-      height: 100%;
-      width: 75%;
 
-      h1 {
-        font-size: 52px;
-        margin-bottom: 4.5vh;
-      }
-
-      p {
-        font-size: 40px;
-        line-height: 52px;
-        height: 56vh;
-        overflow: hidden;
-      }
+    p {
+      margin-top: 10px;
+      font-size: 40px;
+      overflow: hidden;
+      margin-bottom: 50px;
     }
   }
 }
