make image look alright

--- a/src/components/blog/index.scss
+++ b/src/components/blog/index.scss
@@ -17,5 +17,11 @@
       overflow: hidden;
       margin-bottom: 50px;
     }
+
+    img.blog-image {
+      height: 35vh;
+      float: left;
+      margin-right: 20px;
+    }
   }
 }
