--- a/src/components/call-to-action/index.scss
+++ b/src/components/call-to-action/index.scss
@@ -16,8 +16,25 @@
   }
 
   h1.listen-now {
-    font-size: 78px;
+    font-size: 68px;
     margin-top: 50px;
     margin-bottom: 30px;
+  }
+
+  h1.touch-video {
+    font-size: 55px;
+    margin-top: 50px;
+    margin-bottom: 30px;
+  }
+
+  button.watch-now {
+    color: #e3ff75;
+    background-color: #313a97;
+    font-size: 48px;
+    box-shadow: 0;
+    border: 0;
+    padding: 0px 30px;
+    border-radius: 5px;
+    cursor: pointer;
   }
 }
